--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -165,12 +165,12 @@
      menubar: false,
      entity_encoding : 'raw',
      plugins: [
-       'table'
+       'table','fullscreen'
      ],
      toolbar:
        'undo redo | formatselect | bold italic backcolor | \
        alignleft aligncenter alignright alignjustify | \
-       bullist numlist outdent indent | removeformat | help'
+       bullist numlist outdent indent | removeformat | fullscreen | help'
    }"></editor>
               </td>
             </tr>
@@ -186,12 +186,12 @@
      menubar: false,
      entity_encoding : 'raw',
      plugins: [
-       'table'
+       'table','fullscreen'
      ],
      toolbar:
        'undo redo | formatselect | bold italic backcolor | \
        alignleft aligncenter alignright alignjustify | \
-       bullist numlist outdent indent | removeformat | help'
+       bullist numlist outdent indent | removeformat | fullscreen | help'
    }"></editor>
               </td>
             </tr>
