--- a/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
+++ b/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
@@ -198,12 +198,11 @@
             </tr>
           </table>
         </div>
-        <table class="full-width" [hidden]="!quotation.overrideSpecialOffer">
+        <table class="full-width" *ngIf="quotation.overrideSpecialOffer">
           <tr>
             <td>
               <chips-special-offers [(model)]="quotation.specialOffers" [form]="orderingCustomerForm"
-                propertyName="specialOffer" [isDisabled]="!editMode"
-                [conditionnalRequired]="quotation.overrideSpecialOffer">
+                propertyName="specialOffer" [isDisabled]="!editMode">
               </chips-special-offers>
             </td>
           </tr>
