--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -168,9 +168,9 @@
        'table','fullscreen'
      ],
      toolbar:
-       'undo redo | formatselect | bold italic backcolor | \
+       'undo redo | formatselect | fontname fontsize | bold italic underline forecolor backcolor | \
        alignleft aligncenter alignright alignjustify | \
-       bullist numlist outdent indent | removeformat | fullscreen | help'
+       bullist numlist outdent indent | removeformat | fullscreen '
    }"></editor>
               </td>
             </tr>
@@ -191,9 +191,9 @@
        'table','fullscreen'
      ],
      toolbar:
-       'undo redo | formatselect | bold italic backcolor | \
-       alignleft aligncenter alignright alignjustify | \
-       bullist numlist outdent indent | removeformat | fullscreen | help'
+     'undo redo | formatselect | fontname fontsize | bold italic underline forecolor backcolor | \
+     alignleft aligncenter alignright alignjustify | \
+     bullist numlist outdent indent | removeformat | fullscreen |  table tabledelete | tableprops tablerowprops tablecellprops | tableinsertrowbefore tableinsertrowafter tabledeleterow | tableinsertcolbefore tableinsertcolafter tabledeletecol'
    }"></editor>
               </td>
             </tr>
