--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -188,11 +188,11 @@
      menubar: false,
      entity_encoding : 'raw',
      plugins: [
-       'table','fullscreen'
+       'table','fullscreen', 'lists'
      ],
      toolbar:
      'undo redo | formatselect | fontname fontsize | bold italic underline forecolor backcolor | \
-     alignleft aligncenter alignright alignjustify | \
+     alignleft aligncenter alignright alignjustify | numlist bullist | \
      bullist numlist outdent indent | removeformat | fullscreen |  table tabledelete | tableprops tablerowprops tablecellprops | tableinsertrowbefore tableinsertrowafter tabledeleterow | tableinsertcolbefore tableinsertcolafter tabledeletecol'
    }"></editor>
               </td>
