--- a/client/src/app/modules/administration/components/referentials/referential-attachment-type/referential-attachment-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-attachment-type/referential-attachment-type.component.html
@@ -40,6 +40,21 @@
               </generic-input>
             </td>
           </tr>
+          <tr>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.isToSentOnUpload"
+                label="Envoyer les PJ au client dès l'upload du fichier ?" [form]="entityForm"
+                propertyName="isToSentOnUpload"></generic-toggle>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.isToSentOnFinalizationMail"
+                label="Envoyer les PJ au client dans le mail de finalisation de la commande ?" [form]="entityForm"
+                propertyName="isToSentOnFinalizationMail"
+                hint="La PJ la plus récente de chaque type sera envoyée"></generic-toggle>
+            </td>
+          </tr>
         </table>
       </fieldset>
     </div>
