--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.css
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.css
@@ -27,3 +27,15 @@ td {
 .margin-top {
   margin-top: 15px;
 }
+
+.add-button {
+  top: -8px;
+}
+
+.table-fixed-layout {
+  table-layout: fixed;
+}
+
+.fab-td-button {
+  width: 35px;
+}
