--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -536,6 +536,14 @@
           </tr>
           <tr>
             <td>
+              <autocomplete-billing-type [(model)]="constant.billingTypeEmolumentsDeGreffeDebour"
+                label="Type de poste de facturation - Débours Emoluments de greffe" [form]="constantForm"
+                propertyName="billingTypeEmolumentsDeGreffeDebour" [isMandatory]="true" [isDisabled]="!editMode">
+              </autocomplete-billing-type>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <autocomplete-billing-type [(model)]="constant.billingTypeDocumentScanning"
                 label="Type de poste de facturation - Numérisation de document" [form]="constantForm"
                 propertyName="billingTypeDocumentScanning" [isMandatory]="true" [isDisabled]="!editMode">
