--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -59,9 +59,36 @@
           (auxclick)="createInvoice($event, competentAuthority)">(créer une facture libre)</span></li>
     </ul>
   </div>
-  <div class="row-field-container" *ngIf="editMode">
-    <button mat-raised-button (click)="filledForInfogreffeKbis()" color="primary" class="mini-fab-add">
-      Pré-remplir pour un KBis
-    </button>
+  <div *ngIf="greffeInvoices &&  greffeInvoices.length>0" class="margin-top">
+    <p>Factures de greffe trouvées pour cette commande : </p>
+    <ul *ngFor="let greffeInvoice of greffeInvoices">
+      <li>Facture n°{{greffeInvoice.numero}} - {{greffeInvoice.owncloudGreffeFile.competentAuthority.label }} - Total
+        TTC : {{greffeInvoice.totalPrice}} € <span class="pointer" *ngIf="canAddNewInvoice()"
+          (click)="createInvoiceFromGreffeInvoice( greffeInvoice)">(créer le débours et la facture libre)</span></li>
+    </ul>
   </div>
-</div>
+  <div>
+    <table class="full-width  ">
+      <tr>
+        <td>
+          Rechercher une facture de greffe :
+        </td>
+        <td style="width: 80%;">
+          <autocomplete-greffe-invoice [(model)]="selectedGreffeInvoice" [form]="debourForm"
+            propertyName="selectedGreffeInvoice" [isMandatory]="false"></autocomplete-greffe-invoice>
+        </td>
+        <td class="fab-td-button">
+          <button mat-mini-fab color="warn" matTooltip="Créer le débours et la facture libre"
+            (click)="createInvoiceFromGreffeInvoice(selectedGreffeInvoice)" class="add-button">
+            <mat-icon>add</mat-icon>
+          </button>
+        </td>
+      </tr>
+    </table>
+    <div>
+      <div class="row-field-container" *ngIf="editMode">
+        <button mat-raised-button (click)="filledForInfogreffeKbis()" color="primary" class="mini-fab-add">
+          Pré-remplir pour un KBis
+        </button>
+      </div>
+    </div>
