frontend - align simpleProvision and Formalite

--- a/client/src/app/modules/quotation/components/guichet-unique/content/content.component.html
+++ b/client/src/app/modules/quotation/components/guichet-unique/content/content.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formaliteForm" *ngIf="formalite && formalite.content">
+<!--form [formGroup]="formaliteForm" *ngIf="formalite && formalite.content">
   <table class="full-width">
     <tr
       *ngIf="formalite.typePersonne.code==typePersonnePersonneMorale.code && formalite.typeFormalite.code==typeFormaliteCreation.code">
@@ -82,4 +82,4 @@
   //TODO : not found for property piecesJointes
   //TODO : not found for property exploitation
 
-</form>
+</form-->
