--- a/client/src/app/modules/quotation/components/guichet-unique/identite/identite.component.html
+++ b/client/src/app/modules/quotation/components/guichet-unique/identite/identite.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formaliteForm" *ngIf="formalite && formalite.content && formalite.content.natureCreation">
+<!--form [formGroup]="formaliteForm" *ngIf="formalite && formalite.content && formalite.content.natureCreation">
   <table class="full-width" dummyTable>
     <tr dummyTr>
       <td dummyTd>
@@ -25,4 +25,4 @@
   </table>
   //TODO : not found for property adresseCorrespondance
   //TODO : not found for property contactCorrespondance
-</form>
+</form-->
