--- a/client/src/app/modules/quotation/components/guichet-unique/nature-creation/nature-creation.component.html
+++ b/client/src/app/modules/quotation/components/guichet-unique/nature-creation/nature-creation.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formaliteForm" *ngIf="formalite && formalite.content && formalite.content.natureCreation">
+<!--form [formGroup]="formaliteForm" *ngIf="formalite && formalite.content && formalite.content.natureCreation">
   <table class="full-width">
     <tr>
       <td>
@@ -107,4 +107,4 @@
       </td>
     </tr>
   </table>
-</form>
+</form-->
