--- a/client/src/app/modules/quotation/components/guichet-unique/personne-physique/personne-physique.component.html
+++ b/client/src/app/modules/quotation/components/guichet-unique/personne-physique/personne-physique.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formaliteForm" *ngIf="formalite && formalite.content && formalite.content.natureCreation">
+<!--form [formGroup]="formaliteForm" *ngIf="formalite && formalite.content && formalite.content.natureCreation">
   <identite [formalite]="formalite" [identite]="personnePhysique.identite" [editMode]="editMode"
     [isStatusOpen]="isStatusOpen" [instanceOfCustomerOrder]="instanceOfCustomerOrder" [provision]="provision"
     (provisionChange)="provisionChangeFunction()"></identite>
@@ -8,4 +8,4 @@
   //TODO : not found for property autresEtablissements
   //TODO : not found for property optionsFiscales
   //TODO : not found for property detailCessationEntreprise
-</form>
+</form-->
