--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -23,6 +23,8 @@
                 [isDisabled]="true"></autocomplete-competent-authority>
             </td>
           </tr>
+        </table>
+        <table class="full-width">
           <tr>
             <td>
               <generic-textarea [(model)]="formalite.observations" label="Observations" [form]="formaliteForm"
