--- a/client/src/app/modules/tiers/components/phone-teams/search-phone.component.html
+++ b/client/src/app/modules/tiers/components/phone-teams/search-phone.component.html
@@ -1,9 +1,11 @@
-test
-<button type="submit" (click)="onSubmit()">SEND</button>
-
 <div *ngFor="let phone of phoneSearchs">
-  <p>Entity Type: {{ phone.entityType }}</p>
-  <p>Entity ID: {{ phone.entityId }}</p>
-  <button (click)="openRoute($event, '/' + phone.entityType.toLowerCase() + '/' + phone.entityId)">Info Window</button>
-  --------------------------------------------------------------------
+  <ng-container *ngIf="!moreOptions">
+    <p>Entity Type: {{ phone.entityType }}</p>
+    <p>Entity ID: {{ phone.entityId }}</p>
+    <button (click)="openRoute($event, '/' + phone.entityType.toLowerCase() + '/' + phone.entityId)">Info Window</button>
+    --------------------------------------------------------------------
+  </ng-container>
+  <ng-container *ngIf="moreOptions">
+    {{ openRoute(null, '/' + phone.entityType.toLowerCase() + '/' + phone.entityId) }}
+  </ng-container>
 </div>
