tapis deroulant valide par arsene

--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -9,7 +9,7 @@
 </ng-template>
 
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #sidenav mode="side" position="end" [fixedInViewport]="true" [fixedTopGap]="165" [fixedBottomGap]="100">
+  <mat-sidenav #sidenav mode="side" position="end" [fixedInViewport]="true" [fixedTopGap]="165" [fixedBottomGap]="100" style="width: 20%; height: 70%; margin-right: 20px;">
     <div class="scrollable-table">
     <table>
       <ng-container *ngFor="let asso of quotation.assoAffaireOrders;let indexAsso = index">
