--- a/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
@@ -15,9 +15,9 @@
   </ng-container>
   <ng-container *ngIf="invoice.deposits && invoice.deposits.length>0 ">
     <tr class="mat-row" *ngFor="let deposit of invoice.deposits">
-      <td class="mat-cell">
+      <td class="mat-cell payment-label" [matTooltip]="deposit.originPayment.label">
         N°{{deposit.id}} du {{formatDate(deposit.depositDate)}} - {{deposit.label}} - montant du paiement :
-        {{deposit.originPayment.paymentAmount}} €
+        {{deposit.originPayment.paymentAmount}} € - {{deposit.originPayment.label}}
       </td>
       <td class="td-price mat-cell">
         {{deposit.depositAmount}} €
