--- a/client/src/app/modules/profile/components/my-profil/my-profil.component.html
+++ b/client/src/app/modules/profile/components/my-profil/my-profil.component.html
@@ -42,8 +42,8 @@
           </td>
           <td>
             <generic-input [(model)]="currentEmployee.inpiPassword" label="Mot de passe INPI" [form]="employeeForm"
-              propertyName="inpiPassword" [isMandatory]="false" [isDisabled]="!editMode" [maxLength]="250"
-              type="password"></generic-input>
+              propertyName="inpiPassword" [isMandatory]="false" [isDisabled]="!editMode"
+              [maxLength]="250"></generic-input>
           </td>
         </tr>
       </table>
