--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -59,7 +59,7 @@
           (auxclick)="createInvoice($event, competentAuthority)">(créer une facture libre)</span></li>
     </ul>
   </div>
-  <div *ngIf="greffeInvoices &&  greffeInvoices.length>0" class="margin-top">
+  <div *ngIf="greffeInvoices &&  greffeInvoices.length>0 && isNotInpi()" class="margin-top">
     <p>Factures de greffe trouvées pour cette commande : </p>
     <ul *ngFor="let greffeInvoice of greffeInvoices">
       <li>Facture n°{{greffeInvoice.numero}} - {{greffeInvoice.owncloudGreffeFile.competentAuthority.label }} - Total
@@ -67,7 +67,16 @@
           (click)="createInvoiceFromGreffeInvoice( greffeInvoice)">(créer le débours et la facture libre)</span></li>
     </ul>
   </div>
-  <div>
+  <div *ngIf="infogreffeInvoices &&  infogreffeInvoices.length>0  && isNotInpi()" class="margin-top">
+    <p>Factures Infogreffe trouvées pour cette commande : </p>
+    <ul *ngFor="let greffeInvoice of infogreffeInvoices">
+      <li>Facture n°{{greffeInvoice.customerReference}} - {{greffeInvoice.competentAuthority.label }} - Total
+        TTC : {{ (greffeInvoice.preTaxPrice + greffeInvoice.vatPrice) | number}} € <span class="pointer"
+          *ngIf="canAddNewInvoice()" (click)="createInvoiceFromInfogreffeInvoice( greffeInvoice)">(créer le débours et
+          la facture libre)</span></li>
+    </ul>
+  </div>
+  <div *ngIf=" isNotInpi()">
     <table class="full-width  ">
       <tr>
         <td>
@@ -85,6 +94,23 @@
         </td>
       </tr>
     </table>
+    <table class="full-width  ">
+      <tr>
+        <td>
+          Rechercher une facture Infogreffe :
+        </td>
+        <td style="width: 80%;">
+          <autocomplete-infogreffe-invoice [(model)]="selectedInfogreffeInvoice" [form]="debourForm"
+            propertyName="selectedInfogreffeInvoice" [isMandatory]="false"></autocomplete-infogreffe-invoice>
+        </td>
+        <td class="fab-td-button">
+          <button mat-mini-fab color="warn" matTooltip="Créer le débours et la facture libre"
+            (click)="createInvoiceFromInfogreffeInvoice(selectedInfogreffeInvoice)" class="add-button">
+            <mat-icon>add</mat-icon>
+          </button>
+        </td>
+      </tr>
+    </table>
     <div>
       <div class="row-field-container" *ngIf="editMode">
         <button mat-raised-button (click)="filledForInfogreffeKbis()" color="primary" class="mini-fab-add">
@@ -92,3 +118,4 @@
         </button>
       </div>
     </div>
+  </div>
