--- a/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
+++ b/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
@@ -18,5 +18,8 @@
     <mat-tab label="Prélèvements">
       <direct-debit-transfer-list></direct-debit-transfer-list>
     </mat-tab>
+    <mat-tab label="Factures Infogreffe">
+      <infogreffe-invoice-list></infogreffe-invoice-list>
+    </mat-tab>
   </mat-tab-group>
 </div>
