--- a/client/src/app/modules/tiers/components/phone-teams/search-phone.component.html
+++ b/client/src/app/modules/tiers/components/phone-teams/search-phone.component.html
@@ -1,11 +1,8 @@
+<form method="post" action="/phone/search">
 <div *ngFor="let phone of phoneSearchs">
-  <ng-container *ngIf="!soloOption">
     <p>Entity Type: {{ phone.entityType }}</p>
     <p>Entity ID: {{ phone.entityId }}</p>
     <button (click)="openRoute($event, '/' + phone.entityType.toLowerCase() + '/' + phone.entityId)">Info Window</button>
     --------------------------------------------------------------------
-  </ng-container>
-  <ng-container *ngIf="soloOption">
-    {{ openRoute(null, '/' + phone.entityType.toLowerCase() + '/' + phone.entityId) }}
-  </ng-container>
 </div>
+</form>
