--- a/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
+++ b/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
@@ -171,6 +171,7 @@
                       {{invoiceLabelResult.billingLabelPostalCode?invoiceLabelResult.billingLabelPostalCode:"Code
                       postal inconnu"}}
                       {{invoiceLabelResult.billingLabelCity?invoiceLabelResult.billingLabelCity.label:"Ville inconnue"}}
+                      {{invoiceLabelResult.cedexComplement?invoiceLabelResult.cedexComplement:""}}
                       {{invoiceLabelResult.billingLabelCountry?invoiceLabelResult.billingLabelCountry.label:"Pays
                       inconnu"}}
                     </p>
