--- a/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
+++ b/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
@@ -90,8 +90,7 @@
                   </td>
                 </tr>
               </table>
-              <table class="full-width"
-                *ngIf="billingDocument && billingLabelTypeAffaire &&  billingDocument.billingLabelType && billingDocument.billingLabelType.id!=billingLabelTypeAffaire.id">
+              <table class="full-width" *ngIf="billingDocument">
                 <tr>
                   <td>
                     <generic-toggle [(model)]="billingDocument.isResponsableOnBilling" label="Responsable sur facture ?"
