--- a/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
+++ b/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
@@ -111,8 +111,7 @@
               </td>
             </tr>
           </table>
-          <table class="full-width"
-            *ngIf="billingDocument && billingLabelTypeAffaire &&  billingDocument.billingLabelType && billingDocument.billingLabelType.id!=billingLabelTypeAffaire.id">
+          <table class="full-width" *ngIf="billingDocument">
             <tr>
               <td>
                 <generic-toggle [(model)]="billingDocument.isResponsableOnBilling" label="Responsable sur facture ?"
