--- a/client/src/app/modules/invoicing/components/add-invoice/add-invoice.component.html
+++ b/client/src/app/modules/invoicing/components/add-invoice/add-invoice.component.html
@@ -101,6 +101,12 @@
             <generic-toggle [(model)]="invoice.billingLabelIsIndividual" [isDisabled]="!editMode || !isManualInvoice()"
               label="Est particulier ?" [form]="invoiceForm" propertyName="billingLabelIsIndividual"></generic-toggle>
           </td>
+          <td *ngIf="invoice.billingLabelIsIndividual==false">
+            <generic-input [(model)]="invoice.billingLabelIntercommunityVat" [isDisabled]="!editMode"
+              label="TVA intercommunaitaire" [form]="invoiceForm" propertyName="billingLabelIntercommunityVat"
+              [isMandatory]="false" [conditionnalRequired]="" [customValidators]="[checkVAT('intercommunityVat')]">
+            </generic-input>
+          </td>
         </tr>
       </table>
       <table class="full-width">
