--- a/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
@@ -310,8 +310,7 @@
   (auxclick)="editInvoice($event)">
   <mat-icon>edit</mat-icon>
 </button>
-<button
-  *ngIf="false && invoice && (invoice.invoiceStatus.code==invoiceStatusSend.code || invoice.invoiceStatus.code==invoiceStatusPayed.code  || invoice.invoiceStatus.code==invoiceStatusReceived.code) "
-  matTooltip="Annuler la facture" mat-fab color="accent" class="second-fab-button" (click)="cancelInvoice($event)">
+<button *ngIf="invoice && invoice.invoiceStatus.code==invoiceStatusReceived.code " matTooltip="Annuler la facture"
+  mat-fab color="accent" class="second-fab-button" (click)="cancelInvoice($event)">
   <mat-icon>close</mat-icon>
 </button>
