--- a/client/src/app/modules/invoicing/components/invoice-payment/invoice-payment.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-payment/invoice-payment.component.html
@@ -12,7 +12,7 @@
     <payment-list [overrideIconAction]="'merge_type'" [overrideTooltipAction]="'Associer le paiement'"
       (actionBypass)="openAssociationDialog($event)"></payment-list>
   </div>
-  <div class=" advise" *ngIf="displayAddCashPayment">
+  <div class=" advise" *ngIf="displayAddCashPayment && !invoice.isInvoiceFromProvider">
     <h3>Déclarer un paiement en espèces</h3>
     <div>
       <form [formGroup]="invoicePaymentForm">
