--- a/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
@@ -24,6 +24,16 @@
       </td>
     </tr>
   </ng-container>
+  <ng-container *ngIf="invoice.appoints && invoice.appoints.length>0 ">
+    <tr class="mat-row" *ngFor="let appoint of invoice.appoints">
+      <td class="mat-cell payment-label" [matTooltip]="appoint.originPayment.label">
+        Appoint n°{{appoint.id}} du {{formatDate(appoint.appointDate)}} - {{appoint.label}}
+      </td>
+      <td class="td-price mat-cell">
+        {{appoint.appointAmount | number}} €
+      </td>
+    </tr>
+  </ng-container>
   <tr class="mat-row"
     *ngIf="invoice.payments && invoice.payments.length>0 || invoice.deposits && invoice.deposits.length>0">
     <td class="mat-cell">
