--- a/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
+++ b/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
@@ -18,6 +18,9 @@
     <mat-tab label="Prélèvements">
       <direct-debit-transfer-list></direct-debit-transfer-list>
     </mat-tab>
+    <mat-tab label="Appoints">
+      <appoint-list></appoint-list>
+    </mat-tab>
     <mat-tab label="Factures Infogreffe">
       <infogreffe-invoice-list></infogreffe-invoice-list>
     </mat-tab>
