--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -76,8 +76,8 @@
           la facture libre)</span></li>
     </ul>
   </div>
-  <div>
-    <table class="full-width  " *ngIf=" isNotInpi()">
+  <div *ngIf=" isNotInpi()">
+    <table class="full-width  ">
       <tr>
         <td>
           Rechercher une facture de greffe :
@@ -94,7 +94,7 @@
         </td>
       </tr>
     </table>
-    <table class="full-width  " *ngIf=" isNotInpi()">
+    <table class="full-width  ">
       <tr>
         <td>
           Rechercher une facture Infogreffe :
